feat: update leg class to implement foot pivot for improved movement and rotation control
Co-authored-by: Francisca Almeida <francisca.vicente.de.almeida@tecnico.ulisboa.pt>

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
     </script>
     <script type="module" src="js/main-script.js"></script>
-    <title>CG - Table Example</title>
+    <title>CG - A28</title>
   </head>
 
   <body></body>
