feat: update project title in index.html and add report.txt for group documentation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
       </script>
     <script type="module" src="js/main-script.js"></script>
-    <title>CG - A28</title>
+    <title>CG - A18 - 2024/2025</title>
   </head>
 
   <body></body>
